# vlm-surgery

./: .gitignore  .roorules  CLAUDE.md  Dockerfile  Dockerfile.train  README.md  docker-compose.internvl3-78b.yml  docker-compose.internvl3.yml  docker-compose.train.yml  docker-compose.yml  pyproject.toml
notes/: ADD_HARMONIC_LOSS.md  DATASET.md  DOCKER_README.md  README_stages.md
prompts/: committee_prompt.txt  cot_prompt_eg.txt  encyclopedia_prompt.txt  generated_prompts.json  one_shot_template.txt
src/: cot_dataset_loader.py  data_expander.py  data_expander_cot.py  dataset_loader.py  expanded_dataset_loader.py  inference.py  inference_server.py  prompt_generator.py  resize_images.py  train.py  train_qwen.py  train_qwen_muon.py  unified_dataset_loader.py  xml_to_json_test.py
src/data/: adapters.py  protocols.py  transforms.py  virtual_dataset.py
src/debug/: sample_dataset.py  verify_dataset.py
src/gardening/: README.md  merge_lora.py  merge_lora_vllm.py  quantize_fp8.py
src/models/: dataset.py  ocr_schemas.py
src/surgery/: GRADIENT_ISSUE.md  ROOT_CAUSE_ANALYSIS.md  adapter_changes.txt  chat_template.jinja  fsdp_config.yaml  hybrid_model.py  inference.py  merge_and_export.py  qwen_qwen.md  qwen_qwen_vision.py  qwen_vision.py  train_intern.py  train_qwen.py  train_qwen_qwen.py  verify_qwen3.py
tests/data/: test_adapters.py  test_protocols.py  test_transforms.py
tests/surgery/: test_grid_thw_fix.py  test_train_qwen_qwen.py  test_vision_model.py
